# craps-bonus-tracker

./: .envrc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-notes.md  vcpkg.json
apps/cbt-tests/: CMakeLists.txt  cbt_tests_sources.cmake
apps/cbt-tests/src/: AppSetup.cpp  AppSetup.h  CbtTestBase.cpp  CbtTestBase.h  CrapsBonusTrackerTest.cpp  CrapsBonusTrackerTest.h  TestEnvManager.cpp  TestEnvManager.h  main.cpp
apps/craps-bonus-tracker/: CMakeLists.txt  app_sources.cmake
apps/craps-bonus-tracker/src/: AppSetup.cpp  main.cpp
cmake/ports/ncurses/: portfile.cmake
cmake/toolchains/: aarch64-linux-gnu.cmake
cmake/triplets/: arm64-linux-static.cmake
lib/cbt/: CMakeLists.txt  cbt_sources.cmake
lib/cbt-gui/: CMakeLists.txt  cbt_gui_sources.cmake
lib/cbt-gui/src/: CbtPresenter.cpp  CbtPresenter.h  IPresenter.h  IView.h  NcursesView.cpp  NcursesView.h
lib/cbt/src/: CrapsBonusTracker.cpp  CrapsBonusTracker.h
lib/cbt/src/utils/: CbtErrorCodes.h
